@@ -18,6 +18,8 @@
 
 package org.apache.tez.mapreduce.examples;
 
+import static org.apache.tez.mapreduce.examples.ExampleDriver.getTezDecoratedConfiguration;
+
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Date;
@@ -291,7 +293,7 @@ public class RandomWriter extends Configured implements Tool {
   }
   
   public static void main(String[] args) throws Exception {
-    int res = ToolRunner.run(new Configuration(), new RandomWriter(), args);
+    int res = ToolRunner.run(getTezDecoratedConfiguration(), new RandomWriter(), args);
     System.exit(res);
   }
 
